--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SpeechT5/fairseq"]
 	path = SpeechT5/fairseq
 	url = https://github.com/pytorch/fairseq
+[submodule "Speech2C/fairseq"]
+	path = Speech2C/fairseq
+	url = https://github.com/facebookresearch/fairseq.git
